bunch of changes a while ago, but forgot which ones

--- a/atom/styles.less
+++ b/atom/styles.less
@@ -4,7 +4,7 @@
 //  symlink:  ~/.atom/                                //
 //  purpose:  atom editor styling                     //
 //  date:     04/19/2016                              //
-//  repo:     https://github.com/WebAppNut/dotfiles   //
+//  repo:     https://github.com/DevOpsEtc/dotfiles   //
 ////////////////////////////////////////////////////////
 
 // resize atom ui
@@ -31,13 +31,13 @@ atom-text-editor::shadow .cursor {
 }
 
 // style the line wrap guide
-atom-text-editor::shadow .wrap-guide {
+atom-text-editor.editor .wrap-guide {
   opacity: .40; // reduced visibility
 }
 
 // style the inactive pane
 atom-pane:not(.active) {
-  opacity: 0.75;
+  opacity: 0.80;
 }
 
 // style terminal-plus fork
